# securevault

./: .gitignore  DIRECTORY_STRUCTURE.md  Dockerfile  README-postgres.md  README.md  config.yaml  docker-compose.cluster.yml  docker-compose.yml  go.mod  instructions.txt  latest.md  setup.sh  test-config.yaml  token_explanation.md
clients/go/: client.go  client_test.go
clients/java/: pom.xml
clients/java/src/main/java/com/example/securevault/: SecureVaultClient.java
clients/python/securevault/: __init__.py  client.py  exceptions.py  models.py
clients/rust/: Cargo.toml
clients/rust/src/: client.rs  error.rs  lib.rs  models.rs
cmd/server/: main.go
configs/: dev-config.yaml  production.yaml
deploy/: test-cluster.sh
deploy/configs/: follower1.yaml  follower2.yaml  leader.yaml
deploy/k8s/: configmap.yaml  followers.yaml  leader.yaml  namespace.yaml
examples/: run-all-examples.sh
examples/go/: main.go
examples/python/: example.py
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
examples/walkthrough/: 01-admin-setup.sh  02-client-access.sh  README.md
examples/walkthrough/java/: pom.xml
pkg/audit/: audit.go
pkg/errors/: errors.go
pkg/policy/: policy.go  policy_test.go
pkg/seal/: seal.go  seal_test.go
pkg/server/: replication_test.go  server.go  server_test.go
pkg/server/pkg/server/: server_test.go
pkg/server/pkg/server/pkg/server/: server_test.go
pkg/storage/: postgres.go  postgres_test.go  storage.go  storage_test.go
pkg/ui/: ui.go
pkg/ui/static/: index.html
scripts/: init-postgres.sql
(+31 files in other folders)
