[package]
name = "securevault-client"
version = "0.1.0"
edition = "2021"
description = "Rust client library for the Vaultrix REST API"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
